scroll glitch bug to test on iphone

--- a/src/app/pages/homepage/index.css
+++ b/src/app/pages/homepage/index.css
@@ -6,6 +6,9 @@ body {
   @media screen and (max-width: 1023px) {
     height: auto;
   } */
+  &.--mobile {
+    overflow: hidden;
+  }
 }
 
 .year-container {
